plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.hexagonal'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web' // Para REST
	implementation 'org.projectlombok:lombok' // Para usar Lombok
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	runtimeOnly 'com.h2database:h2' // Base de datos en memoria H2
	annotationProcessor 'org.projectlombok:lombok' // Procesador de anotaciones para Lombok

	// Dependencias para pruebas
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.1'
	testImplementation 'org.mockito:mockito-core:5.3.1'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}


tasks.named('test') {
	useJUnitPlatform()
	jvmArgs = ['-Djdk.instrument.traceUsage', '-XX:+EnableDynamicAgentLoading']
}

// Configuración de Spring Boot para ejecutar la aplicación
bootRun {
	mainClass = 'com.hexagonal.product_finder.ProductFinderApplication'
}
